# graph2plan

./: pyproject.toml
notebooks/: 01_dcel.ipynb  02_external_embed.ipynb  03_1_draw_four_complete.ipynb  03_4tp.ipynb  03_four_complete_TO_TEST.ipynb  03_fourtp_to_dual.ipynb  04_four_complete.ipynb  05_paths.ipynb
outputs/three_plan/: path.json  plan.json
outputs/three_plan/connectivity/: _00.json  _01.json  _02.json  _03.json  _04.json  _05.json  _06.json  _07.json  _08.json  _09.json  _10.json  _11.json  _12.json  _13.json  _14.json
pickles/: co.pickle  test_degen_cycle_results_250508.pickle
src/graph2plan/: constants.py
src/graph2plan/canonical/: canonical_interfaces.py  canonical_order.py
src/graph2plan/dcel/: create.py  examples.py  external.py  extract_faces.py  interfaces.py  original.py
src/graph2plan/dual/: check.py  create_domains.py  create_dual.py  create_rectangle.py  examples.py  helpers.py  interfaces.py
src/graph2plan/export/: export.py
src/graph2plan/external_embed/: main.py  naive.py  outer_face.py
src/graph2plan/fourtp/: canonical_helpers.py  canonical_interfaces.py  canonical_order.py  check_canonical.py  checks.py  draw_four_complete.py  examples.py  faces.py  four_complete.py  rel.py  rel2.py  tests.py
src/graph2plan/helpers/: auto_pos.py  general_interfaces.py  geometry_interfaces.py  graph_interfaces.py  utils.py
src/graph2plan/main/: tests.py
src/graph2plan/rel/: rel2.py
tests/: conftest.py  test_canonical_order.py  test_dual_creation.py  test_embedding.py  test_four_complete.py  test_fourtp_checks.py  test_rel.py
